--- a/.env_example
+++ b/.env_example
@@ -1,1 +1,2 @@
-DB_KEY="mongodb+srv://maxbrownwot:<password>@cluster0.lvevxz1.mongodb.net/db-contacts?retryWrites=true&w=majority&appName=Cluster0"
+DB_KEY= databse key 
+TOKEN_SECRET= token key
