--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,7 @@
 DB_KEY= databse key 
 TOKEN_SECRET= token key
 TEST_DB_KEY=test database key
+EMAIL_MAILTRAP_SERVICE_USER= email MAILTRAP service username
+EMAIL_MAILTRAP_SERVICE_PASSWORD= email MAILTRAP service password
+EMAIL_META_SERVICE_USER= email META service username
+EMAIL_META_SERVICE_PASSWORD= email META service password
